--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -91,6 +91,8 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
 	
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
+	
+	
 <!--只有字的ad-->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -124,12 +126,12 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
-<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
      data-ad-slot="3686946415"></ins>
 <script>
@@ -194,35 +196,33 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://rsoftware.baklib-free.com/Software/811e' target="_blank" >Qv2ray</a></p>	
 	<p> </p>  
 	
-<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>	
-	
- 
-	
-	<h1>㊙️Password ：<a href='/pages/tools.html'   target="_blank"  >👋click me </a></h1>
-<p> </p>  
-	
-	<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
      data-ad-slot="3686946415"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+ 
 	
+	<h1>㊙️Password ：<a href='/pages/tools.html'   target="_blank"  >👋click me </a></h1>
+<p> </p>  
+	
+	    <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hr-7+2n-1d-69"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
       </article>
     </main>
