--- a/ad.html
+++ b/ad.html
@@ -82,17 +82,17 @@ var _hmt = _hmt || [];
         <center> <strong><em>这里是广告赞助页面，你可以点击它，这样我会有一些收入</em></strong> </center> 
             <br>
 	</br>
- <!-- Gd-ad-text -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gw-7+1w-2e-b"
-      data-ad-client="ca-pub-1293855853975663"
-      data-ad-slot="3686946415"></ins>
- <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
- </script>
+     <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hr-7+2n-1d-69"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- Gd-ad-text -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -137,28 +137,28 @@ var _hmt = _hmt || [];
  <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
  </script>
-  <!-- Gd-ad-text -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
+     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
      data-ad-slot="3686946415"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
- <!-- Gd-ad-text -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gw-7+1w-2e-b"
-      data-ad-client="ca-pub-1293855853975663"
-      data-ad-slot="3686946415"></ins>
- <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
- </script>
+    <!-- 样式更改 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hr-7+2n-1d-69"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3686946415"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
           
           </div>
