--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -65,11 +65,15 @@ var _hmt = _hmt || [];
         <h1 id="article-title">📹 Vlog</h1>
         <table class="postindex">
 <tbody>
-
 	
  <tr>
     <td><a href="https://sourl.cn/nUB6BK"><cite>Wechat History</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
+</tr>
+	
+ <tr>
+    <td><a href="/vlog/2021-06-18-graduation.html"><cite> life film|Graduation</cite></a></td>
+    <td class="right"><time>2021-06-18</time></td>
 </tr>
 <tr>
     <td><a href="/vlog/2021-04-04-LAB.html"><cite>life film|Spring LAB</cite></a></td>
