--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ problems in hypergraphs of small rank.</li>
   </div>
 	
 	
-<footer class="hide-on-print"> <center> <a href="https://beian.miit.gov.cn"> 苏ICP备XXXXXX号</a> </center> </footer>
+<footer class="hide-on-print"> <center> <a href="https://beian.miit.gov.cn"> 苏ICP备2021026927号</a> </center> </footer>
 	
 </div>
 	  
