--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
     <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
     <div class="cv-left">
         <label class="showmore material-icons" for="kdepots-toggle"></label>
-        <a href="files/papers/kdepots.pdf"><i class="material-icons">description</i></a>
-        <a href="files/presentations/kdepots.pdf"><i class="material-icons">airplay</i></a>
+        <a href="files/paper/fgene-12-692426.pdf"><i class="material-icons">description</i></a>
+        <a href="files/paper/fgene-12-692426.pdf"><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
       <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
@@ -216,13 +216,15 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
       </em><p>
     </div>
     <div class="abstract">
-	    <p>Background: Colon cancer (CC) is a common gastrointestinal malignant tumor with high heterogeneity in clinical behavior and response to treatment, making individualized survival prediction challenging. Ferroptosis is a newly discovered iron-dependent cell death that plays a critical role in cancer biology. Therefore, identifying a prognostic biomarker with ferroptosis-related genes provides a new strategy to guide precise clinical decision-making in CC patients.
+   <p>
+   Background: Colon cancer (CC) is a common gastrointestinal malignant tumor with high heterogeneity in clinical behavior and response to treatment, making individualized survival prediction challenging. Ferroptosis is a newly discovered iron-dependent cell death that plays a critical role in cancer biology. Therefore, identifying a prognostic biomarker with ferroptosis-related genes provides a new strategy to guide precise clinical decision-making in CC patients.
 
-Methods: Alteration in the expression profile of ferroptosis-related genes was initially screened in GSE39582 dataset involving 585 CC patients. Univariate Cox regression analysis and LASSO-penalized Cox regression analysis were combined to further identify a novel ferroptosis-related gene signature for overall survival prediction. The prognostic performance of the signature was validated in the GSE17536 dataset by Kaplan-Meier survival curve and time-dependent ROC curve analyses. Functional annotation of the signature was explored by integrating GO and KEGG enrichment analysis, GSEA analysis and ssGSEA analysis. Furthermore, an outcome risk nomogram was constructed considering both the gene signature and the clinicopathological features.
+   Methods: Alteration in the expression profile of ferroptosis-related genes was initially screened in GSE39582 dataset involving 585 CC patients. Univariate Cox regression analysis and LASSO-penalized Cox regression analysis were combined to further identify a novel ferroptosis-related gene signature for overall survival prediction. The prognostic performance of the signature was validated in the GSE17536 dataset by Kaplan-Meier survival curve and time-dependent ROC curve analyses. Functional annotation of the signature was explored by integrating GO and KEGG enrichment analysis, GSEA analysis and ssGSEA analysis. Furthermore, an outcome risk nomogram was constructed considering both the gene signature and the clinicopathological features.
 
-Results: The prognostic signature biomarker composed of 9 ferroptosis-related genes accurately discriminated high-risk and low-risk patients with CC in both the training and validation datasets. The signature was tightly linked to clinicopathological features and possessed powerful predictive ability for distinct clinical subgroups. Furthermore, the risk score was confirmed to be an independent prognostic factor for CC patients by multivariate Cox regression analysis ( p value < 0.05). Functional annotation analyses showed that the prognostic signature was closely correlated with pivotal cancer hallmarks, particularly cell cycle, transcriptional regulation, and immune-related functions. Moreover, a nomogram with the signature was also built to quantify outcome risk for each patient.
+   Results: The prognostic signature biomarker composed of 9 ferroptosis-related genes accurately discriminated high-risk and low-risk patients with CC in both the training and validation datasets. The signature was tightly linked to clinicopathological features and possessed powerful predictive ability for distinct clinical subgroups. Furthermore, the risk score was confirmed to be an independent prognostic factor for CC patients by multivariate Cox regression analysis ( p value < 0.05). Functional annotation analyses showed that the prognostic signature was closely correlated with pivotal cancer hallmarks, particularly cell cycle, transcriptional regulation, and immune-related functions. Moreover, a nomogram with the signature was also built to quantify outcome risk for each patient.
 
-Conclusion: The novel ferroptosis-related gene signature biomarker can be utilized for predicting individualized prognosis, optimizing survival risk assessment and facilitating personalized management of CC patients. </p>
+   Conclusion: The novel ferroptosis-related gene signature biomarker can be utilized for predicting individualized prognosis, optimizing survival risk assessment and facilitating personalized management of CC patients. 
+   </p>
 	  
 	  </div>
   </div>
@@ -375,7 +377,7 @@ problems in hypergraphs of small rank.</li>
 	
 	
 <footer class="hide-on-print"> <center> <a href="https://beian.miit.gov.cn"> 苏ICP备2021026927号</a> </center> </footer>
-	
+	<p></p>	<p></p>
 </div>
 	  
 	
