--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
     <input type="checkbox" class="abstract-guard" id="kdepots-toggle">
     <div class="cv-left">
         <label class="showmore material-icons" for="kdepots-toggle"></label>
-        <a href="files/paper/fgene-12-692426.pdf"><i class="material-icons">description</i></a>
-        <a href="https://www.frontiersin.org/articles/10.3389/fgene.2021.692426/full"><i class="material-icons">airplay</i></a>
+        <a href="files/paper/fgene-12-692426.pdf" target="_blank" ><i class="material-icons">description</i></a>
+        <a href="https://www.frontiersin.org/articles/10.3389/fgene.2021.692426/full" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
       <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
       <ul class="coauthor-list">
         <li>
-            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm">Xin Qi</a></li></ul>
+            <a href="http://scls.usts.edu.cn/szdw1/zzjs.htm" target="_blank" >Xin Qi</a></li></ul>
       <p><em>
           Frontiers in Genetics <time>2021</time>.
       </em><p>
