--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -101,11 +101,9 @@ var _hmt = _hmt || [];
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
-<p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> ｜  X9.3.2 <a href='https://rickywang.lanzous.com/imN2smb8r8b' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  // 2020 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
+<p> <a href='http://www.las.ac.cn' target="_blank" >Endnote (NSL) </a> ｜  X9.3.2 <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a>  // 2020 <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a></p>
 
-<p><a href='https://www.graphpad-prism.cn/' target="_blank">GraphPad Prism 8 </a> <a href='https://rickywang.lanzous.com/ibr80qh' target="_blank">Win</a> <a href='https://rickywang.lanzous.com/ibr83sh' target="_blank" >Mac</a> // Prism 9 <a href='https://sourl.cn/rcswid' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a' target="_blank" >Mac</a></p>
-	
-<p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf' target="_blank" >5.0</a> // 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza' target="_blank" >Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg' target="_blank" >Win64</a></p>
+<p><a href='https://www.graphpad-prism.cn/' target="_blank">GraphPad Prism 8 </a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank">Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a> // Prism 9 <a href='https://sourl.cn/rcswid' target="_blank" >Win</a> <a href='https://sourl.cn/rcswid' target="_blank" >Mac</a></p>
 	
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
 
