--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -101,12 +101,9 @@ var _hmt = _hmt || [];
 <p><a href='https://sourl.cn/URF5kx' target="_blank" >PDF-XChange-Editor9.0.3</a> </p>
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
-<p> <a href='http://www.las.ac.cn' target="_blank" >Endnote (NSL) </a> ｜  X9.3.2 <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a>  // 2020 <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a></p>
-
-<p><a href='https://www.graphpad-prism.cn/' target="_blank">GraphPad Prism 8 </a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank">Win</a> <a href='https://thoughts.teambition.com/share/602131f7e7ea12004ac28aed' target="_blank" >Mac</a> // Prism 9 <a href='https://sourl.cn/rcswid' target="_blank" >Win</a> <a href='https://sourl.cn/rcswid' target="_blank" >Mac</a></p>
-	
+<p> <a href='https://thoughts.teambition.com/share/60e07c6527a74b004ab805e3' target="_blank" >Endnote </a> ｜  
+<p><a href='https://thoughts.teambition.com/share/604f2f1de7bd040047aae2fa' target="_blank">GraphPad Prism  </a> 
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
-
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
 <h3>Professional software</h3>
