--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>王睿的个人主页</title>
+  <title>Ruiprime｜王睿的个人主页</title>
   <meta name="description" content="The personal webpage of Rui Wang.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" crossorigin="anonymous">
   <!-- Do not remove katex render. Index page is a idpage --> 
@@ -39,10 +39,6 @@
     }}});
   </script>
 	
-<!-- Cloudflare Web Analytics -->
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e413e3537a7748d48eceeb5dd9a2405f", "spa": true}'></script>
-<!-- End Cloudflare Web Analytics -->	
-		
 	
  <!-- 百度统计 -->
 <script>
@@ -88,7 +84,9 @@ var _hmt = _hmt || [];
 <div class="row">
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
     <meta itemprop="representativeOfPage" content="True">
-    <!-- 首页头像 -->
+   
+	  
+<!-- 首页头像 -->
     <br />
    <img width="220" height="220" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210320135336.gif" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
 	</div>
