--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -4,10 +4,10 @@
     
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Art Gallery Guardian">
+    <meta name="description" content="Software and Tools">
     <meta name="author" content="Rui Wang">
  <!--作者-->
-    <meta property="og:title" content="Tools">
+    <meta property="og:title" content="🧰｜叮当猫的工具箱">
  <!--页面标题-->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
