--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -12,8 +12,8 @@
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="math, life">
-    <title>Tools</title> 
- <!--页面标题-->
+    <title>🧰｜叮当猫的工具箱</title> 
+ <!--网页标题-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 	
