--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -64,31 +64,17 @@ var _hmt = _hmt || [];
         <br>
 <div>
      <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>   
-    
+   
     <h3>Common software</h3>
 	
 	<p> </p>
 	
 <p><a href='https://www.google.cn/chrome/' target="_blank" >Google Chrome</a></p>
 <p><a href='https://www.microsoft.com/zh-cn/edge/' target="_blank" >Microsoft Edge</a></p>
-<p><a href='https://office.qq.com/' target="_blank" >TIM</a></p>
-	
-<p><a href='https://rickywang.lanzous.com/ibr0uud' target="_blank" >Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvzvg' target="_blank" >2016</a></p> 
-	
-<p><a href='https://www.teamviewer.cn/cn/' target="_blank" >Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud' target="_blank" >Lite</a></p>
-
+<p><a href='https://office.qq.com/' target="_blank" >TIM</a></p>	
+<p><a href='https://thoughts.teambition.com/share/60e8699c6730c60046fdbf48' target="_blank" >Office </a> 
+<p><a href='https://www.teamviewer.cn/cn/' target="_blank" >
 <p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
-	
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
 	
 
@@ -107,12 +93,9 @@ var _hmt = _hmt || [];
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
 <h3>Professional software</h3>
-	
-	
-
 <p> </p>
 <p><a href='https://sourl.cn/mjLBp6' target="_blank" >R</a> </p>
-<p> <a href='https://sourl.cn/egiiGi' target="_blank" >Adobe</a></p>	
+<p> <a href='https://thoughts.teambition.com/share/60e8680b3531230046c4ccb8' target="_blank" >Adobe</a></p>	
 <p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/4vci9Q' target="_blank" >Win</a> <a href='https://sourl.cn/N6qNgh' target="_blank" >Mac</a> </p>
 <p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb' target="_blank" >Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/U8C4pW'>Win</a> <a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWktFTENJWFE3RkduUllKVURvaHgyTUJhOTVtbFNNRUFHUzZlNDhMYTVGOTVBP2U9RlVKUXlW.zip' target="_blank" >Mac</a> </p>
@@ -120,39 +103,18 @@ var _hmt = _hmt || [];
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/47FvVm' target="_blank" >Mac</a> </p>
 <p>PDF Expert <a href='https://sourl.cn/5qafE4' target="_blank" >Mac</a> </p>
 <p><a href='https://sourl.cn/J8WyYV' target="_blank" >AutoCAD 2022</a></p>
-<p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
-	
-<h3>OpenWRT</h3>
-	
-	 <p> </p>
-<p><a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >With Docker</a></p>
 
-	<h3>VPN</h3>
-	  <p> </p>
 
-	 
+<h3>VPN</h3>
+<p> </p>	 
 <p><a href='https://rsoftware.baklib-free.com/Software/811e' target="_blank" >Qv2ray</a></p>	
-	<p> </p>  
 	
+<p> </p>  
+<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 	
-	
- 
-	
-	<h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 <p> </p>  
 	
-	
-	    <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 	
       </article>
     </main>
