--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -113,8 +113,10 @@ var _hmt = _hmt || [];
 <h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 
 <p></p> 
- 	
-<p> <strong>CAUTION:</em></strong> This site is not for profit. If the content of this site affects your rights, please contact ruiprime#outlook.com, we will close and delete the copyrighted content as soon as possible.
+	
+  <br>
+	</br>	
+<p>⚠️<strong>CAUTION:</em></strong> This site is not for profit. If the content of this site affects your rights, please contact ruiprime#outlook.com, we will close and delete the copyrighted content as soon as possible.
 </p>  
 	
 
