--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -116,10 +116,11 @@ var _hmt = _hmt || [];
 	
   <br>
 	</br>	
-<p>⚠️<strong>CAUTION:</em></strong> This site is not for profit. If the content of this site affects your rights, please contact ruiprime#outlook.com, we will close and delete the copyrighted content as soon as possible.
-</p>  
+<p>⚠️<strong>CAUTION:</em></strong> This site is not for profit. If the content of this site affects your rights, please contact ruiprime#outlook.com, we will close and delete the copyrighted content as soon as possible.</p>  
 	
-
+	
+  <br>
+	</br>
 	
       </article>
     </main>
