--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -66,8 +66,8 @@ var _hmt = _hmt || [];
 	
 	
     <center>       
-<video width="98%" poster="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge63dg791rj31ke0u0x6q.jpg" controls="controls">
-  <source src="https://baobab.kaiyanapp.com/api/v1/playUrl?vid=188056&resourceType=video&editionType=default&source=aliyun&playUrlType=url_oss&ptl=true" type="video/mp4" />
+<video width="98%" poster="https://img.kaiyanapp.com/c0e8dbea1ee11c6219418a449bca42a0.png" controls="controls">
+  <source src="https://sourl.cn/i4rNDL" type="video/mp4" />
   </object>
 </video>
 	  </center>   
