--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -73,11 +73,12 @@ var _hmt = _hmt || [];
 	  </center>   
        <br>
 	</br>  
-	    <center> <strong><em>24 Frames</em></strong> </center>   
+	    <center> <strong><em>Edward Yang</em></strong> </center>   
             <br>
 	</br>
              
-    <p><strong><em>24 Frames</em></strong> (<a href='https://en.wikipedia.org/wiki/Persian_language'>Persian</a>: ۲۴ فریم‎) is a 2017 Iranian <a href='https://en.wikipedia.org/wiki/Experimental_film'>experimental film</a> directed by <a href='https://en.wikipedia.org/wiki/Abbas_Kiarostami'>Abbas Kiarostami</a>. It was his final feature film before his death in July 2016. It was posthumously shown in the 70th Anniversary Events section at the <a href='https://en.wikipedia.org/wiki/2017_Cannes_Film_Festival'>2017 Cannes Film Festival</a>.</p>            
+    <p>The questions that I have thought about in the past two years can be answered in Yang Dechang's movies. Those babbling life philosophies are cold and sharp, and every sentence reminds me to always check whether I’m done.
+To be truly alive, what is it that I want.</p>            
             
        <br>
 	</br>
