--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -57,7 +57,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">24 FPS</h1>
+        <h1 id="article-title">致敬杨德昌</h1>
         <br>
 <div>
 	
