--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
             <br>
 	</br>
              
-    <p>The questions that I have thought about in the past two years can be answered in Yang Dechang's movies. Those babbling life philosophies are cold and sharp, and every sentence reminds me to always check whether I’m done.
+    <p>The questions that I have thought about in the past two years can be answered in Yang's movies. Those babbling life philosophies are cold and sharp, and every sentence reminds me to always check whether I’m done.
 To be truly alive, what is it that I want.</p>            
             
        <br>
