--- a/film.html
+++ b/film.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	These are some important moments in my life
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Important moments in my life</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -96,7 +94,7 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
+									<h2>These are some important moments in my life</h2>
 									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
 								</section>
 								<section>
@@ -111,7 +109,7 @@
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; <www class="ruiprime cn"></www> <a href="http://www.ruiprime.cn">ruiprime.cn</a>.
 								</p>
 							</div>
 							<div>
