--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -67,7 +67,7 @@ var _hmt = _hmt || [];
 <tbody>
 	
  <tr>
-    <td><a href="https://sourl.cn/nUB6BK"><cite>Wechat History</cite></a></td>
+    <td><a href="https://sourl.cn/nUB6BK" target="_blank"  ><cite>Wechat Channel</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
 </tr>
 	
