--- a/ad.html
+++ b/ad.html
@@ -24,7 +24,8 @@ var _hmt = _hmt || [];
 })();
 </script>
  <!-- 谷歌ad-->
-<script data-ad-client="ca-pub-1293855853975663" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -61,19 +62,7 @@ var _hmt = _hmt || [];
         <h1 id="article-title">sponsor</h1>
         <br>
 <div>
-	 <!-- Gd-ad-text -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-   
-	
+
 	<center><img width="55%"src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413185333.svg"/> </center> 
 	
 	</br>  
@@ -82,85 +71,30 @@ var _hmt = _hmt || [];
         <center> <strong><em>这里是广告赞助页面，你可以点击它，这样我会有一些收入</em></strong> </center> 
             <br>
 	</br>
-     <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!--google ads-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-  <!-- Gd-ad-text -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+           <!--google ads-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
- <!-- Gd-ad-text -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gw-7+1w-2e-b"
-      data-ad-client="ca-pub-1293855853975663"
-      data-ad-slot="3686946415"></ins>
- <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
- </script>
-  <!-- Gd-ad-text -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
- <!-- Gd-ad-text -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gw-7+1w-2e-b"
-      data-ad-client="ca-pub-1293855853975663"
-      data-ad-slot="3686946415"></ins>
- <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
- </script>
-     <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-          
           </div>
 <div class="hide-on-print">
     <div class="info">Posted by <a href="https://ruiprime.github.io/">Ricky</a> </div>
