--- a/pages/tools.html
+++ b/pages/tools.html
@@ -62,17 +62,20 @@ var _hmt = _hmt || [];
         <h1 id="article-title">🔧 Tools</h1>
 <p> </p>  
 		<p> </p>  
-<!--只有字的ad-->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 		<br>
 		<br>
 		<center>⬇️⬇️⬇️</center>
@@ -84,17 +87,19 @@ var _hmt = _hmt || [];
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
 	<center><img width=50% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210327151308.jpg" referrerpolicy="no-referrer"></center>
 		
-		<!--只有字的ad-->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 
 		<br>
 	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >click me👈👈 </a></em></strong> </center>
@@ -108,7 +113,19 @@ var _hmt = _hmt || [];
         <br>
 		<br>
 
-	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 
       </article>
     </main>
