--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 	<!-- 谷歌ad-->
-<script data-ad-client="ca-pub-1293855853975663" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 	
 <!-- 百度统计-->
     <script>
@@ -92,19 +92,18 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 	
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
 	
-	
-<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-	
+</script>	
+
 	
 
 <h3>Research software</h3>
@@ -121,18 +120,17 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
 	
-    <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
 	
 	
 	
@@ -152,14 +150,14 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
 <p><a href='https://sourl.cn/J8WyYV' target="_blank" >AutoCAD 2022</a></p>
 	
-<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -170,15 +168,14 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 	 <p> </p>
 <p><a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >With Docker</a></p>
 
-	
-	<!--只有字的ad-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-gw-7+1w-2e-b"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -191,33 +188,23 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://rsoftware.baklib-free.com/Software/811e' target="_blank" >Qv2ray</a></p>	
 	<p> </p>  
 	
-    <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
      data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
      data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
+     data-ad-slot="3848807872"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
- 
 	
 	<h1>㊙️Password ：<a href='/pages/tools.html'   target="_blank"  >👋click me </a></h1>
 <p> </p>  
 	
-	    <!-- 样式更改 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hr-7+2n-1d-69"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="3686946415"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	   
 	
       </article>
     </main>
