--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@ var _hmt = _hmt || [];
     
     
 <p>
-	<a href="/pages/blog.html"><span style="font-family: quot;font-size:25px;"><strong>My Blog</strong></span></a>
-</p>
-<p>
-	<a href="/pages/vlog.html"><span style="font-family: quot;font-size:25px;"><strong>My Vlog</strong></span></a>
+	<a href="/pages/blog.html"><strong>My Blog </strong></a>
+	<a href="/pages/vlog.html"><strong>My Vlog </strong></a>
 </p>
    
  <p>I’m a biology college student at <a href='https://www.usts.edu.cn/'>Suzhou University of Science and Technology</a> .My research interests are bioinformatics .</p>
