--- a/index.html
+++ b/index.html
@@ -100,11 +100,9 @@ var _hmt = _hmt || [];
 
     
     
-<p>
-	<a href="/pages/blog.html"><strong>My Blog </strong></a>
-	<a href="/pages/vlog.html"><strong>My Vlog </strong></a>
-</p>
-   
+<p><a href="/pages/blog.html"><strong>My Blog </strong></a></p>
+<p></p>
+
  <p>I’m a biology college student at <a href='https://www.usts.edu.cn/'>Suzhou University of Science and Technology</a> .My research interests are bioinformatics .</p>
 
 
