--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -86,6 +86,18 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://www.7-zip.org/' target="_blank" >7-Zip</a> </p>
 <p><a href='https://sourl.cn/nUGiFy' target="_blank" >Internet Download Manager</a> </p>
 	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <h3>Research software</h3>
 	<p> </p>
@@ -100,6 +112,19 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p><a href='https://thoughts.teambition.com/share/604f2f1de7bd040047aae2fa' target="_blank">GraphPad Prism  </a> 
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
 <p><a href='https://sourl.cn/3AzcHw' target="_blank" >SPSS</a> </p>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
 <h3>Professional software</h3>
 <p> </p>
@@ -113,6 +138,18 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p>PDF Expert <a href='https://sourl.cn/5qafE4' target="_blank" >Mac</a> </p>
 <p><a href='https://sourl.cn/J8WyYV' target="_blank" >AutoCAD 2022</a></p>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <h3>VPN</h3>
 <p> </p>	 
@@ -121,6 +158,18 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <p> </p>  
 <h1>⚙️Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg'   target="_blank"  >👋click me </a></h1>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<!-- 横向图片长广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="5193146308"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p></p> 
 	
   <br>
