--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 </script>
 	  
 	       <center>
-    <img src="https://cdn.jsdelivr.net/gh/biowr/picture/Pic/picgo/20210413193513.svg"/>
+    <a href="/ad.html"> <img src="/pic/404-sad-mac.svg"/>
         <h2>UH OH! You're lost.</h2>
         <p>  ⚠️The page you are looking for does not exist.
           How you got here is a mystery. But you can click the button below
