--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ We utilize vertex ordering based ideas to obtain our results. Unlike graphs we o
     <div class="cv-left">
         <label class="showmore material-icons" for="kdepots-toggle"></label>
         <a href="files/paper/fgene-12-692426.pdf" target="_blank" ><i class="material-icons">description</i></a>
-        <a href="https://www.frontiersin.org/articles/10.3389/fgene.2021.692426/full" target="_blank" ><i class="material-icons">airplay</i></a>
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8280527/" target="_blank" ><i class="material-icons">airplay</i></a>
     </div>
     <div class="cv-right">
       <cite class="paper-title">A ferroptosis-related gene signature identified as a novel prognostic biomarker for colon cancer</cite>
