--- a/pages/film.html
+++ b/pages/film.html
@@ -95,7 +95,9 @@ var _hmt = _hmt || [];
 
 
             <!--文章末尾-->
-          
+            <center>
+              <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5vlmarpytrg&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=times_new_roman&amp;l=1&amp;s=341&amp;cw=ffffff&amp;cb=000000" async="async"></script>
+              </center> 
       </article>
     </main>
    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="/" rel="author">Rui Wang</a>.
