--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -119,7 +119,7 @@ var _hmt = _hmt || [];
 <p>⚠️<strong>CAUTION:</em></strong> This site is not for profit. If the content of this site affects your rights, please contact ruiprime#outlook.com, we will close and delete the copyrighted content as soon as possible.</p>  
 	
 <center>
-  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5vlmarpytrg&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=times_new_roman&amp;l=1&amp;s=400&amp;cw=ffffff&amp;cb=000000" async="async"></script>
+  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5vlmarpytrg&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=times_new_roman&amp;l=1&amp;cw=ffffff&amp;cb=000000" async="async"></script>
 </center>
 	
   <br>
