--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -74,6 +74,11 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
         <h1 id="article-title">🔧 Tools</h1>
         <br>
 <div>
+     
+     <h3><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" >Update page</a></h3>
+     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" ></a>Subsequent updates will be based on the link above ⬆️ </a> </p>
+
+
      <h3>Common software</h3>
 	
 	<p> </p>
