--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -65,7 +65,8 @@ var _hmt = _hmt || [];
 <div>
      <!-- 样式更改 -->
      <h3><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" >Update page</a></h3>
-     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" ></a>Subsequent updates will be based on the link above ⬆️ </a> </p>
+     <p> </p>
+     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" > ↑ Subsequent updates will be based on the link above </a> </p>
 
 
      <h3>Common software</h3>
