--- a/pages/tools-back.html
+++ b/pages/tools-back.html
@@ -76,7 +76,8 @@ var password="";password=prompt('🚀Follow the WeChat public account "is-wzja" 
 <div>
      
      <h3><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" >Update page</a></h3>
-     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" ></a>Subsequent updates will be based on the link above ⬆️ </a> </p>
+     <p> </p>
+     <p><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036' target="_blank" > ↑ Subsequent updates will be based on the link above </a> </p>
 
 
      <h3>Common software</h3>
