--- a/pages/software-center.html
+++ b/pages/software-center.html
@@ -64,8 +64,7 @@ var _hmt = _hmt || [];
         <br>
 <div>
      
-  <iframe height="1100px" src="https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036">
-  </iframe>
+  <iframe src="https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036" height="1100px"  frameborder="0" scrolling="no"></iframe>
   
   
   <!-- 样式更改 -->
