--- a/pages/tools.html
+++ b/pages/tools.html
@@ -78,14 +78,14 @@ var _hmt = _hmt || [];
 
 		<br>
 		<br>
-		<center>⬇️⬇️⬇️</center>
-	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >🔑Enter Password</a></em></strong> </center>
+	
+	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >关注公众号‘is-wzja’ 回复‘pwd’获取下载密码</a></em></strong> </center>
 		<p> </p>  
-		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点击下载👈</a></em></strong> </center>
+		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点我下载</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
-	<center><img width=50% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210327151308.jpg" referrerpolicy="no-referrer"></center>
+	<center><img width=80% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210327151308.jpg" referrerpolicy="no-referrer"></center>
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
      crossorigin="anonymous"></script>
@@ -102,13 +102,13 @@ var _hmt = _hmt || [];
 
 
 		<br>
-	<center> <strong><em>📥Tools Download ：<a href='/pages/tools-back.html'   target="_blank"  >click me👈👈 </a></em></strong> </center>
+	<center> <strong><em> ：<a href='/pages/software-center.html'   target="_blank"  >Software Center </a></em></strong> </center>
 
 
 		
 	<br>
 		<br>
-	<center> <a href='/pages/toolss.html'   target="_blank"  >❤️❤️❤️</a></center>
+	<center> <a href='/pages/toolss.html'   target="_blank"  >❤️</a><a href='/pages/software-center.html'   target="_blank"  >❤️</a><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036'   target="_blank"  >❤️</a></center>
 
         <br>
 		<br>
@@ -131,7 +131,7 @@ var _hmt = _hmt || [];
 
       </article>
     </main>
-    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://rickywang.baklib.com" rel="author">Rui Wang</a>. 
+    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="/index.html" rel="author">Rui Wang</a>. 
     <a href="/README.html">Blog README</a>.</footer>
   
 
