--- a/pages/tools.html
+++ b/pages/tools.html
@@ -78,34 +78,32 @@ var _hmt = _hmt || [];
 
 		<br>
 		<br>
-	
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+          crossorigin="anonymous"></script>
+     <!-- 横向图片长广告 -->
+     <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-1293855853975663"
+          data-ad-slot="5193146308"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+     <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+     </script>
+     
 	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >关注公众号‘is-wzja’ 回复‘pwd’获取下载密码</a></em></strong> </center>
 		<p> </p>  
 		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点我下载</a></em></strong> </center>
                 <br>
 		<br>
 		<center> <strong><em>Follow the WeChat public account ‘is-wzja’ and reply ‘pwd’ to get the password.</em></strong> </center>
-	<center><img width=80% src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210327151308.jpg" referrerpolicy="no-referrer"></center>
+
+
+	<center><img width=60% src="https://tva1.sinaimg.cn/large/008i3skNgy1gtpgpg8y9uj60f20n60u602.jpg" referrerpolicy="no-referrer"></center>
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
-     crossorigin="anonymous"></script>
-<!-- 横向图片长广告 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="5193146308"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-
-		<br>
-	<center> <strong><em> ：<a href='/pages/software-center.html'   target="_blank"  >Software Center </a></em></strong> </center>
-
-
 		
+	<center> <strong><em> <a href='/pages/software-center.html'   target="_blank"  >Software Center </a></em></strong> </center>
+
 	<br>
 		<br>
 	<center> <a href='/pages/toolss.html'   target="_blank"  >❤️</a><a href='/pages/software-center.html'   target="_blank"  >❤️</a><a href='https://thoughts.teambition.com/sharespace/6120d803b9352a0041a25036'   target="_blank"  >❤️</a></center>
