--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 	  
 <!-- 首页头像 -->
     <br />
-   <img width="220" height="220" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210320135336.gif" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
+   <img width="220" height="220" src="https://tva1.sinaimg.cn/large/008lQi3Ygy1gtpt1i3jr7g607s07sdqy02.gif" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
 	</div>
   <div class="intro-right">
     
